Fix Main container overflow, Fix Icon fs

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -51,7 +51,6 @@ aside{
 }
 
 .ms-list-item{
-    font-size: 1.25rem;
     padding: .5rem 0;
     cursor: pointer;
 }
